# datasette-accounts

./: .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  plan.html  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_accounts/: __init__.py  db.py  grantable.py  hookspecs.py  internal_migrations.py  manifest.json  messages.py  page_data.py  passwords.py  providers.py  router.py  security.py  seeds.py  sessions.py
datasette_accounts/cli/: __init__.py  approve.py  audit.py  base.py  bootstrap_admin.py  create.py  delete.py  demote.py  disable.py  disable_provider.py  enable.py  enable_provider.py  expire.py  hash_password.py  invite.py  list_accounts.py  login_attempts.py  logout.py  promote.py  providers.py  registration.py  reject.py  reset_link.py  reset_password.py  set_signups.py  unlock.py
datasette_accounts/providers/: __init__.py  password.py
datasette_accounts/routes/: api.py  pages.py  providers.py
datasette_accounts/sql/: __init__.py  _queries_generated.py  queries.sql
datasette_accounts/templates/: accounts_base.html
datasette_auth_basic_login/: __init__.py  db.py  internal_migrations.py  passwords.py  router.py  security.py  seeds.py  sessions.py
datasette_auth_basic_login/routes/: api.py  pages.py
datasette_auth_basic_login/templates/: basic_login_base.html
docs/: DEVELOPMENT.md
examples/datasette-accounts-demo-auth/: README.md  pyproject.toml
examples/datasette-accounts-demo-auth/datasette_accounts_demo_auth/: __init__.py
fly/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  run.sh
fly/scripts/: bootstrap-db.sh  bootstrap_internal_db.py  deploy.sh  lib.sh  provision.sh  secrets.sh  sync.sh
frontend/: .prettierignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: gen-page-types.d.mts  gen-page-types.mjs  screenshots.mjs
frontend/scripts/shot-plugins/: load_discord_sample.py  load_sample_providers.py  seed.py
frontend/src/lib/: AdminNav.svelte  LinkReveal.svelte  Modal.svelte  PasswordReveal.svelte  api.ts  theme.css
frontend/src/page_data/: load.ts
frontend/src/pages/account/: AccountPage.svelte  index.ts
frontend/src/pages/admin/: AdminPage.svelte  index.ts
frontend/src/pages/audit/: AuditPage.svelte  index.ts
frontend/src/pages/capabilities/: CapabilitiesPage.svelte  index.ts
frontend/src/pages/config/: ConfigPage.svelte  index.ts
frontend/src/pages/login/: LoginPage.svelte  index.ts
frontend/src/pages/login-attempts/: LoginAttemptsPage.svelte  index.ts
frontend/src/pages/messages/: MessagesPage.svelte  index.ts
frontend/src/pages/register/: RegisterPage.svelte  index.ts
frontend/src/pages/set-password/: SetPasswordPage.svelte  index.ts
plans/start/: 00-overview.md  01-architecture.md  02-data-model.md  03-authentication.md  04-admin-and-permissions.md  05-self-service.md  06-brute-force.md  07-user-profiles-compat.md  08-config.md  09-decisions-log.md  10-implementation-plan.md  README.md
samples/bluesky-auth/: README.md  bluesky_auth.py
samples/dev-plugins/: load_samples.py
samples/discord-auth/: README.md  discord_auth.py
samples/github-auth/: README.md  github_auth.py
scripts/: typegen-pagedata.py
tests/: cli_util.py  test_accounts.py  test_basic_login.py  test_bluesky_sample.py  test_cli_bootstrap.py  test_cli_confirm.py  test_cli_create.py  test_cli_expire.py  test_cli_inspect.py  test_cli_invite.py  test_cli_lifecycle.py  test_cli_providers.py  test_cli_registration.py  test_db.py  test_demo_provider.py  test_discord_sample.py  test_generated_queries.py  test_github_sample.py  test_invite_links.py  test_messages.py  test_permissions.py  test_provider_frontend_pagedata.py  test_providers.py  test_providers_external.py  test_providers_linking.py  test_self_registration.py
tools/: gen_queries.py  gen_schema_db.py
wiki/auth2/: build-deltas.md  followups.md  index.md  process.md  repos.md  research.md  train.md
