[project]
name = "datasette-accounts"
version = "0.1a0"
description = "Username/password authentication for Datasette with database-backed accounts"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a23",
    "datasette-plugin-router>=0.0.1a2",
    "datasette-user-profiles>=0.1.0a9",
    "datasette-vite>=0.0.1a3",
    "pydantic>=2",
    "python-ulid>=3",
    "sqlite-migrate>=0.1b0",
    "sqlite-utils>=3.38",
]

[dependency-groups]
dev = [
    "datasette-acl",
    "datasette-acl-share",
    "datasette-paper",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.0",
    "solite>=0.0.1a36",
]

[project.entry-points.datasette]
accounts = "datasette_accounts"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
datasette_accounts = ["static/**/*", "templates/*", "manifest.json"]

[tool.setuptools.packages.find]
include = ["datasette_accounts*"]
exclude = ["frontend*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
